# hardstyle

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.cursor/context/: Cursor-IDE-llms-full.txt  Google-Colab-llms-full.txt  fastapi-docs.md  fumadocs-docs.md  mermaid-diagrams-docs.md  shadcn_ui-components-docs.md  typer-docs.md  uv-python-manager-docs.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  🐞-bug-report.md  💡-feature-request.md  📌-task---🚀-epic---🔬-spike.md
docs/: package.json  pnpm-lock.yaml
docs/app/: global.css
hardstyle/: logger.py  settings.py
logs/hardstyle/: hardstyle_structured.jsonl
notebooks/: notebook.ipynb
tests/: conftest.py  test_logger.py  test_settings.py
